# motherduck-supasync

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  tables.example.json  tables.local.json
.github/workflows/: ci.yml  codeql.yml  publish.yml  release.yml  sync.yml
benches/: sync_benchmark.rs
docs/: README.md  cli-reference.md  configuration.md  database-setup.md  getting-started.md  github-actions.md  troubleshooting.md
src/: config.rs  error.rs  lib.rs  metrics.rs  motherduck.rs  postgres.rs  schema.rs  sync.rs
